logs/django-zebra.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_zebra-0.4.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zebra'...
Listing './lib/python3.5/site-packages/zebra/conf'...
Listing './lib/python3.5/site-packages/zebra/management'...
Listing './lib/python3.5/site-packages/zebra/management/commands'...
Compiling './lib/python3.5/site-packages/zebra/management/commands/clear_stripe_test_customers.py'...
***   File "./lib/python3.5/site-packages/zebra/management/commands/clear_stripe_test_customers.py", line 20
    print "Clearing stripe test customers:"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zebra/static'...
Listing './lib/python3.5/site-packages/zebra/static/zebra'...
Listing './lib/python3.5/site-packages/zebra/templates'...
Listing './lib/python3.5/site-packages/zebra/templates/zebra'...
Listing './lib/python3.5/site-packages/zebra/templatetags'...
Compiling './lib/python3.5/site-packages/zebra/templatetags/zebra_tags.py'...
***   File "./lib/python3.5/site-packages/zebra/templatetags/zebra_tags.py", line 18
    raise Exception, "Missing stripe form."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zebra/utils.py'...
***   File "./lib/python3.5/site-packages/zebra/utils.py", line 20
    except KeyError, err:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zebra_sample_project'...
Listing './lib/python3.5/site-packages/zebra_sample_project/marty'...
Listing './lib/python3.5/site-packages/zebra_sample_project/marty/templates'...
Listing './lib/python3.5/site-packages/zebra_sample_project/marty/templates/marty'...
Listing './share'...
Listing './share/python-wheels'...
